k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2b-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2b-api
  template:
    metadata:
      labels:
        app: p2b-api
    spec:
      containers:
      - name: p2b-api
        image: aminkrbh/p2b-api:v1
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: p2b-api-service
spec:
  type: NodePort
  selector:
    app: p2b-api
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30777
